# CS5402-Project

./: README.md  pyproject.toml
src/: 1_SVM.ipynb  1_Soft-SVM.ipynb  2_Hard-SVM.ipynb  CS5402_project.ipynb  Kmeans.ipynb  Logistic-Regression.ipynb  Logistic_Regression-checkpoint.ipynb  Mini-Batch-Kmeans.ipynb  Neural-Network.ipynb
