[project]
name = "CS5402-Project"
version = "0.0.1"
authors = [
    { name = "Jack Wyeth", email = "jwf2z@umsystem.edu" },
    { name = "Dane Shuler", email = "dmsngz@umsystem.edu" },
    { name = "Oscar Sargent", email = "osshb6@umsystem.edu" },
    { name = "William Thomsen", email = "wvt5cr@umsystem.edu" },
    { name = "Jimmy Hoerschgen", email = "jthpqb@umsystem.edu" },
]
description = "Credit Card Fraud Detection Project."
readme = { file = "README.md", content-type = "text/markdown" }

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
exclude = ["__pycache__"]
extend-ignore = []

[tool.isort]
profile = "black"
line_length = 79
known_third_party = ["flask", "requests"]
skip = ["__pycache__"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.tox|tests/data|some_script\.py'
require-return-section-when-returning-nothing = true
